<resources>
    <string name="app_name">Murray - Memory Assistant</string>
    <string name="login_label">Login</string>
    <string name="font_family">sans-serif-condensed-light</string>
    <string name="login_description">Sign in with your data that you entered during your registration.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="checkbox_keep_login">Keep me logged in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="account_label">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="error_login">Invalid email or password!</string>
    <string name="register_label">Create account</string>
    <string name="register_description">Register with your data in the fields below</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">Please enter your first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Please enter your last name</string>
    <string name="email_hint">Please enter a valid e-mail</string>
    <string name="password_hint">Please choose a password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_hint">Please repeat the chosen password</string>
    <string name="checkbox_caregiver">I\'m a caregiver</string>
    <string name="patient_email">Enter patient\'s e-mail</string>
    <string name="patient_email_hint">Please enter the e-mail of your patient</string>
    <string name="forgot_password_2">I forgot my password</string>
    <string name="forgot_password_description">Please enter the required data to recover your password</string>
    <string name="recover_password">Send recovery e-mail</string>
    <string name="add_medicine">Add medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="minutes">minutes</string>
    <string name="before">before</string>
    <string name="after">after eating</string>
    <string name="pills">pills</string>
    <string name="medicine_details">Medicine details &amp; instructions (optional)</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="required_medicine_name">Medicine name is required!</string>
    <string name="before_after_not_checked">Before/after eating is not selected!</string>
    <string name="pills_not_zero">Pills number cannot be 0!</string>
    <string name="no_day_selected">At least one day must be selected!</string>
    <string name="error_title_add_medicine">Cannot add medicine!</string>
    <string name="success_message_add_medicine">Medicine added!</string>
    <string name="success">Success!</string>
    <string name="medication_list">Medication List</string>
    <string name="edit_medicine">Edit medicine</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="contact_name">Please enter contact name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Please enter contact\'s phone number</string>
    <string name="relationship">Relationship</string>
    <string name="enter_relationship">Please enter contact\'s relationship with the patient</string>
    <string name="address">Address</string>
    <string name="enter_address">Please enter contact\'s address</string>
    <string name="contact_name_error">Contact name cannot be empty</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="error_title_contact">Cannot add contact</string>
    <string name="success_message_contact_added">Contact added</string>
    <string name="contacts_list">Contacts list</string>
    <string name="edit_contact">Edit contact</string>
    <string name="patient_home">Patient\'s home</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location</string>
    <string name="choose_map_location">Please choose map location</string>
    <string name="location_details">Location Details</string>
    <string name="save">Save</string>
    <string name="location_not_entered">User location not entered</string>
    <string name="error_title_patient_home">Cannot save patient\'s location</string>
    <string name="success_message_home_saved">Patient\'s home saved</string>
    <string name="take_medicine">Take medicine</string>
    <string name="mark_taken">MARK AS TAKEN</string>
    <string name="take_later">TAKE LATER</string>
    <string name="chose_later">You chose to take the pills later!</string>
    <string name="notify_later">New notification in 5 minutes</string>
    <string name="chose_take">You took the pills!</string>
    <string name="pills_marked">Pills marked as taken</string>
    <string name="my_house">My house</string>
    <string name="selected_location">Your selected location is at:</string>
    <string name="take_me_home">Take me home</string>
    <string name="hardcoded_address">5th Avenue 10</string>
    <string name="hardcoded_details">3rd floor, brown door</string>
    <string name="call">Call</string>
    <string name="visit">Visit</string>
    <string name="question_1_text">Where does Mary, your daughter, live?</string>
    <string name="question_2_text">Where did you propose to your wife?</string>
    <string name="question_3_text">How old were you when you got married?</string>
    <string name="question_4_text">What\'s Andrew\'s, your grandson, favourite food?</string>
    <string name="question_5_text">What was the name of the company you founded?</string>
    <string name="question_1_correct_answer">Str. Paris, nr. 4</string>
    <string name="question_2_correct_answer">1981</string>
    <string name="question_3_correct_answer">20</string>
    <string name="question_4_correct_answer">Pizza Margherita</string>
    <string name="question_5_correct_answer">TechStar</string>
    <string name="question_1_incorrect_answer_1">Str. Traian, nr. 23</string>
    <string name="question_1_incorrect_answer_2">Str. Livezeni, nr. 8</string>
    <string name="question_2_incorrect_answer_1">1971</string>
    <string name="question_2_incorrect_answer_2">1991</string>
    <string name="question_3_incorrect_answer_1">25</string>
    <string name="question_3_incorrect_answer_2">18</string>
    <string name="question_4_incorrect_answer_1">Pasta carbonara</string>
    <string name="question_4_incorrect_answer_2">Pasta arrabiata</string>
    <string name="question_5_incorrect_answer_1">StarTech</string>
    <string name="question_5_incorrect_answer_2">IndustryStar</string>
    <string name="question_1_details">She used to live on Traian street, but in 2011 she moved to Paris Street.</string>
    <string name="question_2_details">You proposed to your wife in 1981, after your birthday on the seaside.</string>
    <string name="question_3_details">You got married after you finished your military training, at 20 years old.</string>
    <string name="question_4_details">He loves to eat pizza, and prefers the simple margherita one.</string>
    <string name="question_5_details">You always loved space, and you merged technology with the stars, creating TechStar.</string>
    <string name="location_1_name">Pharmacy</string>
    <string name="location_2_name">Son\'s house</string>
    <string name="location_3_name">Retirement club</string>
    <string name="location_4_name">Hospital</string>
    <string name="location_5_name">Grocery store</string>
    <string name="location_1_address">Magnoliei street, no. 8</string>
    <string name="location_2_address">Paris Street, no. 13</string>
    <string name="location_3_address">Memorandumului Alley, no. 7</string>
    <string name="location_4_address">Clinicilor Street, no. 19</string>
    <string name="location_5_address">Fabricii Street, no. 55</string>
    <string name="firstName_required">First Name is required</string>
    <string name="lastName_required">Last Name is required!</string>
    <string name="email_required">Email is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="password_length_error">Password length should be at least 6 characters long!</string>
    <string name="passwords_do_not_match">Re-entered password does not match with the password!</string>
    <string name="error_title_register">Error!</string>
    <string name="success_message_register">Registration successful!</string>
    <string name="success_message_forgot_password">Recovery e-mail sent!</string>

</resources>