<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/def_margin"
    android:paddingRight="@dimen/def_margin"
    android:paddingTop="@dimen/large_margin"
    android:paddingBottom="@dimen/large_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_2"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_large_size"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textViewForgotPasswordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:text="@string/forgot_password_description"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_small_size"
        android:fontFamily="@font/nunitoregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword" />
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:text="@string/email"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_small_size"
        android:fontFamily="@font/nunitoregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPasswordDescription" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:hint="@string/email"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_small_size"
        android:fontFamily="@font/nunitoregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:backgroundTint="@color/lavender_blue"
        android:text="@string/recover_password"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium_size"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent" />








</androidx.constraintlayout.widget.ConstraintLayout>